--- a/lab-5/package.json
+++ b/lab-5/package.json
@@ -7,5 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "oleg zaiats",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "font-awesome": "^4.7.0",
+    "w3css": "^2.7.0"
+  }
 }
